--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "PointProcesses"
 uuid = "af0b7596-9bb0-472a-a012-63904f2b4c55"
-authors = ["Guillaume Dalle"]
+authors = ["Guillaume Dalle", "José Kling"]
 version = "0.6.0"
 
 [deps]
