Fixed wrong multithreading pattern and incorporated last suggestions

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "PointProcesses"
 uuid = "af0b7596-9bb0-472a-a012-63904f2b4c55"
-authors = ["Guillaume Dalle", "José Kling"]
 version = "0.6.0"
+authors = ["Guillaume Dalle", "José Kling"]
 
 [deps]
 DensityInterface = "b429d917-457f-4dbc-8f4c-0cc954292b1d"
@@ -16,6 +16,7 @@ StatsAPI = "82ae8749-77ed-4fe6-ae5f-f523153014b0"
 DensityInterface = "0.4"
 Distributions = "0.25"
 HypothesisTests = "0.11.5"
+JuliaFormatter = "2.2.0"
 LinearAlgebra = "1.10"
 Random = "1.10"
 Statistics = "1.10"
